crates/lsp/tests/snapshots/semantic_tokens__semantic_tokens_basic.snap
---
source: crates/lsp/tests/semantic_tokens.rs
assertion_line: 19
expression: tokens
---
[
    SemanticToken {
        delta_line: 1,
        delta_start: 6,
        length: 3,
        token_type: 1,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 2,
        delta_start: 12,
        length: 5,
        token_type: 4,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 7,
        length: 3,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 1,
        delta_start: 12,
        length: 3,
        token_type: 3,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 4,
        length: 1,
        token_type: 6,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 3,
        length: 3,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 8,
        length: 3,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 1,
        delta_start: 19,
        length: 1,
        token_type: 6,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 4,
        length: 1,
        token_type: 8,
        token_modifiers_bitset: 0,
    },
]
