crates/lsp/tests/snapshots/semantic_tokens__semantic_tokens_comments.snap
---
source: crates/lsp/tests/semantic_tokens.rs
expression: tokens
---
[
    SemanticToken {
        delta_line: 1,
        delta_start: 4,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 1,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 4,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 5,
        length: 7,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 1,
        delta_start: 4,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 1,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 1,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 3,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 4,
        length: 7,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 1,
        delta_start: 4,
        length: 5,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 6,
        length: 1,
        token_type: 0,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 1,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
]
