crates/lsp/tests/snapshots/semantic_tokens__semantic_tokens_operators.snap
---
source: crates/lsp/tests/semantic_tokens.rs
expression: tokens
---
[
    SemanticToken {
        delta_line: 0,
        delta_start: 0,
        length: 1,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 2,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 3,
        length: 1,
        token_type: 8,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 8,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 9,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 8,
        token_modifiers_bitset: 0,
    },
]
